Set STAGE_NAME env variables

--- a/functions/serverless.yml
+++ b/functions/serverless.yml
@@ -29,8 +29,8 @@ stages:
 
 provider:
   name: aws
-  runtime: nodejs18.x
-  memorySize: 128
+  runtime: nodejs18.x # Needed to enable serverless to run on github actions
+  memorySize: 128 # I think this might be overkill
   region: eu-west-1
   iam:
     role:
@@ -97,7 +97,7 @@ resources:
       Type: AWS::DynamoDB::Table
       DeletionPolicy: Retain
       Properties:
-        DeletionProtectionEnabled: ${param:isProd}
+        DeletionProtectionEnabled: true #${param:isProd}
         AttributeDefinitions:
           - AttributeName: prod_id 
             AttributeType: S
@@ -123,6 +123,7 @@ functions:
         - "card_payment/**"
         - "shared/**"
     environment:
+      STAGE_NAME: ${opt:stage}
       PRODUCTS_TABLE_NAME: ${param:stripeProductsTableName}
     layers:
       - !Ref DynamodbLambdaLayer
@@ -141,6 +142,7 @@ functions:
         - "checkout_complete/**"
         - "shared/**"
     environment:
+      STAGE_NAME: ${opt:stage}
       ATTENDEES_TABLE_NAME: ${param:attendeesTableName}
       STRIPE_SECRET_KEY: ${param:stripeSecretKey}
       CREATE_TICKET_LAMBDA: "${sls:stage}-create_ticket" #! Can't find a way to set this other than as a params that gets used byt function and the function itself
@@ -163,6 +165,7 @@ functions:
         - "create_ticket/**"
         - "shared/**"
     environment:
+      STAGE_NAME: ${opt:stage}
       ATTENDEES_TABLE_NAME: ${param:attendeesTableName}
       STRIPE_SECRET_KEY: ${param:stripeSecretKey}
     layers:
@@ -178,6 +181,7 @@ functions:
         - "customer_preferences/**"
         - "shared/**"
     environment:
+      STAGE_NAME: ${opt:stage}
       ATTENDEES_TABLE_NAME: ${param:attendeesTableName}
     layers:
       - !Ref DynamodbLambdaLayer
@@ -200,6 +204,7 @@ functions:
         - "gen_price_update/**"
         - "shared/**"
     environment:
+      STAGE_NAME: ${opt:stage}
       PRODUCTS_TABLE_NAME: ${param:stripeProductsTableName}
       STRIPE_SECRET_KEY: ${param:stripeSecretKey}
       GITHUB_TOKEN: ${param:githubToken}
@@ -216,6 +221,7 @@ functions:
         - "get_attendees/**"
         - "shared/**"
     environment:
+      STAGE_NAME: ${opt:stage}
       ATTENDEES_TABLE_NAME: ${param:attendeesTableName}
     layers:
       - !Ref DynamodbLambdaLayer
@@ -235,6 +241,7 @@ functions:
         - "scan_ticket/**"
         - "shared/**"
     environment:
+      STAGE_NAME: ${opt:stage}
       ATTENDEES_TABLE_NAME: ${param:attendeesTableName}
     layers:
       - !Ref DynamodbLambdaLayer
@@ -257,6 +264,7 @@ functions:
         - "send_email/**"
         - "shared/**"
     environment:
+      STAGE_NAME: ${opt:stage}
       SENDGRID_API_KEY: ${param:sendgridApiKey}
 
   SendTicket:
@@ -269,6 +277,7 @@ functions:
         - "send_ticket/**"
         - "shared/**"
     environment:
+      STAGE_NAME: ${opt:stage}
       ATTENDEES_TABLE_NAME: ${param:attendeesTableName}
     layers:
       - !Ref DynamodbLambdaLayer
@@ -289,6 +298,7 @@ functions:
         - "stripe_price_update/**"
         - "shared/**"
     environment:
+      STAGE_NAME: ${opt:stage}
       ATTENDEES_TABLE_NAME: ${param:attendeesTableName}
       PRODUCTS_TABLE_NAME: ${param:stripeProductsTableName}
       STRIPE_SECRET_KEY: ${param:stripeSecretKey}
@@ -309,6 +319,7 @@ functions:
         - "transfer_owner/**"
         -  "shared/**"
     environment:
+      STAGE_NAME: ${opt:stage}
       ATTENDEES_TABLE_NAME: ${param:attendeesTableName}
     layers:
       - !Ref DynamodbLambdaLayer
