--- a/functions/serverless.yml
+++ b/functions/serverless.yml
@@ -114,13 +114,13 @@ resources:
             KeyType: RANGE
         BillingMode: PAY_PER_REQUEST
         TableName: ${param:stripeProductsTableName}
-    APIMapping:
-      Type: AWS::ApiGatewayV2::ApiMapping
-      DependsOn: HttpApi
-      Properties:
-        Stage: $default
-        DomainName: "${sls:stage}.api.engine.dance"
-        ApiId: !Ref HttpApi
+    # APIMapping:
+    #   Type: AWS::ApiGatewayV2::ApiMapping
+    #   DependsOn: HttpApi
+    #   Properties:
+    #     Stage: $default
+    #     DomainName: "${sls:stage}.api.engine.dance"
+    #     ApiId: !Ref HttpApi
 
 functions:
 
