--- a/.gitignore
+++ b/.gitignore
@@ -37,5 +37,10 @@ yarn-error.log*
 /blob-report/
 /playwright/.cache/
 
+# Serverless
+.aws/config
+.serverless
+functions/node_modules
+
 .tina/__generated__
 sendgrid.env
