Incorrect http method for send_ticket

--- a/functions/serverless.yml
+++ b/functions/serverless.yml
@@ -298,7 +298,7 @@ functions:
     events:
       - httpApi:
           path: /send_ticket
-          method: post 
+          method: get 
 
   StripePriceUpdate:
     runtime: python3.11
