--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+.serverless
+.aws/config
+
 #Playwright Tests
 /test-results/
 /test-screenshots/
