--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,10 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# Serverless
 .serverless
 .aws/config
+functions/node_modules
 
 #Playwright Tests
 /test-results/
