--- a/functions/serverless.yml
+++ b/functions/serverless.yml
@@ -34,6 +34,8 @@ stages:
       isProd: true
       deletionPolicy: Retain
       stripeSecretKey: ${param:prodStripeSecretKey}
+      githubBranchDestination: "main"
+      
     
 #######################
 # Provider Information
