--- a/functions/serverless.yml
+++ b/functions/serverless.yml
@@ -394,6 +394,8 @@ functions:
           path: /transfer_owner
           method: post
 
+#--------------------          
+
   MailDev:
     runtime: python3.11
     handler: maildev/lambda_function.maildev
@@ -412,3 +414,30 @@ functions:
       - httpApi:
           path: /maildev
           method: get
+
+
+#--------------------
+
+  ImportTickets:
+    runtime: python3.11
+    handler: import_tickets/lambda_function.lambda_handler
+    name: "${sls:stage}-import_tickets"
+    package:
+      patterns:
+        - '!**/**'
+        - "import_tickets/**"
+        -  "shared/**"
+    environment:
+      STAGE_NAME: ${sls:stage}
+      ATTENDEES_TABLE_NAME: ${param:attendeesTableName}
+      SEND_EMAIL_LAMBDA: "${sls:stage}-send_email"
+    events:
+      - httpApi:
+          path: /import_tickets
+          method: post
+
+
+
+
+
+
