add gen_price_update to api

--- a/functions/serverless.yml
+++ b/functions/serverless.yml
@@ -252,6 +252,9 @@ functions:
       - !Ref StripeLambdaLayer
       - !Ref GithubLambdaLayer
     events:
+      - httpApi:
+          path: /gen_price_update
+          method: get
       - stream:
           type: dynamodb
           arn:
