--- a/functions/serverless.yml
+++ b/functions/serverless.yml
@@ -23,6 +23,7 @@ stages:
   default:
     observability: false
     params:
+      eventTableName: "${sls:stage}-MLF24"
       attendeesTableName: "${sls:stage}-mlf-attendees"
       stripeProductsTableName: "${sls:stage}-mlf-stripe-products"
       isProd: false
@@ -133,6 +134,25 @@ resources:
         TableName: ${param:stripeProductsTableName}
         StreamSpecification:
           StreamViewType: NEW_AND_OLD_IMAGES
+    MLF24Table:
+      Type: AWS::DynamoDB::Table
+      DeletionPolicy: ${param:deletionPolicy}
+      Properties:
+        DeletionProtectionEnabled: ${param:isProd}
+        AttributeDefinitions:
+          - AttributeName: PK
+            AttributeType: S
+          - AttributeName: SK
+            AttributeType: S
+        KeySchema:
+          - AttributeName: PK
+            KeyType: HASH
+          - AttributeName: SK
+            KeyType: RANGE
+        BillingMode: PAY_PER_REQUEST
+        TableName: ${param:eventTableName}
+        StreamSpecification:
+          StreamViewType: NEW_AND_OLD_IMAGES           
 
 #######################
 # Functions
@@ -436,7 +456,30 @@ functions:
           path: /import_tickets
           method: post
 
+#--------------------
 
+  TableGroups:
+    runtime: python3.11
+    handler: table_groups/lambda_function.lambda_handler
+    name: "${sls:stage}-table_group"
+    package:
+      patterns:
+        - '!**/**'
+        - "table_groups/**"
+        -  "shared/**"
+    environment:
+      STAGE_NAME: ${sls:stage}
+      EVENT_TABLE_NAME: ${param:eventTableName}
+    events:
+      - httpApi:
+          path: /table_group
+          method: post
+      - httpApi:
+          path: /table_group
+          method: get          
+      - httpApi:
+          path: /table_group
+          method: delete   
 
 
 
